Doc: mention that MonthGrid shows days from previous and next month

Fixes: QTBUG-100554
Change-Id: I1902a7a633926a93c4adc7728573476c7ba23fa3
Reviewed-by: Sze Howe Koh <szehowe.koh@gmail.com>
(cherry picked from commit f922336b8102821a25571733049e584a4a05900a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>